updated config file for RNN training + updated notebook

--- a/notebooks/RNN_notebook.ipynb
+++ b/notebooks/RNN_notebook.ipynb
@@ -68,6 +68,32 @@
    "source": [
     "!pip install torcheval"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b37debbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# 1. Spostati nella cartella principale del progetto (definita nella tua cella di setup)\n",
+    "os.chdir(ROOT_DIR)\n",
+    "\n",
+    "# Verifica di essere nel posto giusto (dovresti vedere 'train_er.py' nella lista)\n",
+    "print(f\"📂 Working Directory impostata su: {os.getcwd()}\")\n",
+    "\n",
+    "# 2. (Opzionale) Fix per i dati\n",
+    "# Nota: Nella tua cella precedente, l'unzip avviene dopo '%cd /content', quindi i dati\n",
+    "# potrebbero essere finiti in '/content/code/data' invece che dentro la cartella del progetto.\n",
+    "# Se il train crasha perché non trova i dati, scommenta la riga qui sotto per spostarli:\n",
+    "# !cp -rn /content/code .\n",
+    "\n",
+    "# 3. Esegui lo script di training\n",
+    "print(\"🚀 Avvio training in corso...\\n\")\n",
+    "!python train_er.py"
+   ]
   }
  ],
  "metadata": {
