--- a/notebooks/RNN_notebook.ipynb
+++ b/notebooks/RNN_notebook.ipynb
@@ -2,32 +2,6 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "id": "c0196c93",
-      "metadata": {
-        "id": "c0196c93",
-        "outputId": "46217ada-67d0-4bc3-f589-b18386c063b5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "☁️ Colab rilevato.\n",
-            "Mounted at /content/drive\n",
-            "Cloning into 'aml-2025-mistake-detection'...\n",
-            "remote: Enumerating objects: 459, done.\u001b[K\n",
-            "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Total 459 (delta 9), reused 11 (delta 9), pack-reused 442 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (459/459), 130.74 KiB | 792.00 KiB/s, done.\n",
-            "Resolving deltas: 100% (296/296), done.\n"
-          ]
-        }
-      ],
       "source": [
         "import sys, os\n",
         "try:\n",
@@ -45,18 +19,24 @@
         "    GITHUB_USER = 'MarcoPernoVDP'\n",
         "    try:\n",
         "        TOKEN = userdata.get('GITHUB_TOKEN')\n",
+        "        # Costruiamo l'URL con il token per l'autenticazione\n",
         "        REPO_URL = f'https://{TOKEN}@github.com/{GITHUB_USER}/{REPO_NAME}.git'\n",
         "    except:\n",
         "        REPO_URL = f'https://github.com/{GITHUB_USER}/{REPO_NAME}.git'\n",
         "\n",
         "    ROOT_DIR = f'/content/{REPO_NAME}'\n",
+        "\n",
         "    if not os.path.exists(ROOT_DIR):\n",
-        "        !git clone {REPO_URL}\n",
+        "        print(\"📥 Cloning repository e submodules...\")\n",
+        "        # AGGIUNTO --recursive: scarica anche i submodule (annotations/) immediatamente\n",
+        "        !git clone --recursive {REPO_URL}\n",
         "    else:\n",
+        "        print(\"🔄 Aggiornamento repository e submodules...\")\n",
         "        %cd {ROOT_DIR}\n",
         "        !git pull\n",
+        "        # AGGIUNTO: Se la cartella esisteva già, forziamo il download/update dei submodule\n",
+        "        !git submodule update --init --recursive\n",
         "        %cd /content\n",
-        "\n",
         "\n",
         "else:\n",
         "    print(\"Ambiente locale rilevato.\")\n",
@@ -65,7 +45,43 @@
         "        ROOT_DIR = os.path.dirname(ROOT_DIR)\n",
         "\n",
         "if ROOT_DIR not in sys.path:\n",
-        "    sys.path.append(ROOT_DIR)\n"
+        "    sys.path.append(ROOT_DIR)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I6lGT8800th6",
+        "outputId": "801f00d5-9530-453b-8873-0b44354a91cd"
+      },
+      "id": "I6lGT8800th6",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "☁️ Colab rilevato.\n",
+            "Mounted at /content/drive\n",
+            "📥 Cloning repository e submodules...\n",
+            "Cloning into 'aml-2025-mistake-detection'...\n",
+            "remote: Enumerating objects: 468, done.\u001b[K\n",
+            "remote: Counting objects: 100% (26/26), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (13/13), done.\u001b[K\n",
+            "Receiving objects: 100% (468/468), 138.15 KiB | 1.14 MiB/s, done.\n",
+            "remote: Total 468 (delta 12), reused 16 (delta 11), pack-reused 442 (from 1)\u001b[K\n",
+            "Resolving deltas: 100% (299/299), done.\n",
+            "Submodule 'annotations' (https://github.com/CaptainCook4D/annotations) registered for path 'annotations'\n",
+            "Cloning into '/content/aml-2025-mistake-detection/annotations'...\n",
+            "remote: Enumerating objects: 152, done.        \n",
+            "remote: Counting objects: 100% (152/152), done.        \n",
+            "remote: Compressing objects: 100% (98/98), done.        \n",
+            "remote: Total 152 (delta 75), reused 108 (delta 46), pack-reused 0 (from 0)        \n",
+            "Receiving objects: 100% (152/152), 793.14 KiB | 3.07 MiB/s, done.\n",
+            "Resolving deltas: 100% (75/75), done.\n",
+            "Submodule path 'annotations': checked out '0e9a108be2cbcbcbd592e7418c0ab9c16232d27a'\n"
+          ]
+        }
       ]
     },
     {
@@ -74,7 +90,7 @@
       "id": "7abd9ae0",
       "metadata": {
         "id": "7abd9ae0",
-        "outputId": "6d0da1ac-702a-4334-baf5-6f2d1570b1fd",
+        "outputId": "2dcf1e53-dfee-4998-db26-bd3bc55a8acf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -884,7 +900,7 @@
       "id": "c55ab9ca",
       "metadata": {
         "id": "c55ab9ca",
-        "outputId": "e1143eae-fd22-417f-f647-cde5ac80e82a",
+        "outputId": "7642d0dc-4fa9-45cf-c730-4acbd26716c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -896,16 +912,20 @@
           "text": [
             "Collecting torcheval\n",
             "  Downloading torcheval-0.0.7-py3-none-any.whl.metadata (8.6 kB)\n",
+            "Collecting loguru\n",
+            "  Downloading loguru-0.7.3-py3-none-any.whl.metadata (22 kB)\n",
             "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.12/dist-packages (from torcheval) (4.15.0)\n",
             "Downloading torcheval-0.0.7-py3-none-any.whl (179 kB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/179.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m179.2/179.2 kB\u001b[0m \u001b[31m6.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: torcheval\n",
-            "Successfully installed torcheval-0.0.7\n"
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/179.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m179.2/179.2 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading loguru-0.7.3-py3-none-any.whl (61 kB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/61.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.6/61.6 kB\u001b[0m \u001b[31m6.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: torcheval, loguru\n",
+            "Successfully installed loguru-0.7.3 torcheval-0.0.7\n"
           ]
         }
       ],
       "source": [
-        "!pip install torcheval"
+        "!pip install torcheval loguru"
       ]
     },
     {
@@ -914,7 +934,7 @@
       "id": "b37debbf",
       "metadata": {
         "id": "b37debbf",
-        "outputId": "bc67dcb0-c165-48ac-e6f3-7d9ae5d7d6a9",
+        "outputId": "6e678f8f-d1ec-47fc-e290-c69e6ce31afb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -927,20 +947,57 @@
             "📂 Working Directory impostata su: /content/aml-2025-mistake-detection\n",
             "🚀 Avvio training in corso...\n",
             "\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: (1) Create a W&B account\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: (2) Use an existing W&B account\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: (3) Don't visualize my results\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Enter your choice: 2\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: You chose 'Use an existing W&B account'\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into https://api.wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Find your API key here: https://wandb.ai/authorize?ref=models\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Paste an API key from your profile and hit enter: \n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33ms337915\u001b[0m (\u001b[33ms339450-politecnico-di-torino\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[38;5;178m⢿\u001b[0m Waiting for wandb.init()...\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[38;5;178m⣻\u001b[0m Waiting for wandb.init()...\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Tracking run with wandb version 0.23.1\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Run data is saved locally in \u001b[35m\u001b[1m/content/aml-2025-mistake-detection/wandb/run-20251211_143511-817gs75w\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Run \u001b[1m`wandb offline`\u001b[0m to turn off syncing.\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Syncing run \u001b[33mfrosty-grass-2\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: ⭐️ View project at \u001b[34m\u001b[4mhttps://wandb.ai/s339450-politecnico-di-torino/error_recognition_recordings_omnivore_Transformer_video\u001b[0m\n",
+            "\u001b[34m\u001b[1mwandb\u001b[0m: 🚀 View run at \u001b[34m\u001b[4mhttps://wandb.ai/s339450-politecnico-di-torino/error_recognition_recordings_omnivore_Transformer_video/runs/817gs75w\u001b[0m\n",
+            "-------------------------------------------------------------\n",
+            "Training step model and testing on step level\n",
+            "Train args: {'num_workers': 8, 'pin_memory': False, 'shuffle': True, 'batch_size': 1}\n",
+            "Test args: {'num_workers': 8, 'pin_memory': False, 'shuffle': False, 'batch_size': 1}\n",
+            "{'batch_size': 1, 'test_batch_size': 1, 'num_epochs': 10, 'lr': 0.001, 'weight_decay': 0.001, 'ckpt': None, 'seed': 42, 'backbone': 'omnivore', 'ckpt_directory': '/data/rohith/captain_cook/checkpoints', 'split': 'recordings', 'variant': 'Transformer', 'model_name': None, 'task_name': 'error_recognition', 'error_category': None, 'modality': ['video']}\n",
+            "-------------------------------------------------------------\n",
+            "Loaded annotations...... \n",
+            "Loading recording ids from recordings_combined_splits.json\n",
+            "/usr/local/lib/python3.12/dist-packages/torch/utils/data/dataloader.py:627: UserWarning: This DataLoader will create 8 worker processes in total. Our suggested max number of worker in current system is 2, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+            "  warnings.warn(\n",
+            "Loaded annotations...... \n",
+            "Loading recording ids from recordings_combined_splits.json\n",
+            "Loaded annotations...... \n",
+            "Loading recording ids from recordings_combined_splits.json\n",
             "Traceback (most recent call last):\n",
-            "  File \"/content/aml-2025-mistake-detection/train_er.py\", line 2, in <module>\n",
-            "    from base import fetch_model_name, train_step_test_step_dataset_base, train_sub_step_test_step_dataset_base, \\\n",
-            "  File \"/content/aml-2025-mistake-detection/base.py\", line 19, in <module>\n",
-            "    from core.models.rnn_mlp import RNNMLP\n",
-            "  File \"/content/aml-2025-mistake-detection/core/models/rnn_mlp.py\", line 4, in <module>\n",
-            "    from core.models.blocks import RNN, MLP, fetch_input_dim\n",
-            "ImportError: cannot import name 'RNN' from 'core.models.blocks' (/content/aml-2025-mistake-detection/core/models/blocks.py). Did you mean: 'CNN'?\n"
+            "  File \"/content/aml-2025-mistake-detection/train_er.py\", line 36, in <module>\n",
+            "    main()\n",
+            "  File \"/content/aml-2025-mistake-detection/train_er.py\", line 29, in main\n",
+            "    train_step_test_step_er(conf)\n",
+            "  File \"/content/aml-2025-mistake-detection/train_er.py\", line 16, in train_step_test_step_er\n",
+            "    train_model_base(train_loader, val_loader, config, test_loader=test_loader)\n",
+            "  File \"/content/aml-2025-mistake-detection/base.py\", line 161, in train_model_base\n",
+            "    scheduler = ReduceLROnPlateau(\n",
+            "                ^^^^^^^^^^^^^^^^^^\n",
+            "TypeError: ReduceLROnPlateau.__init__() got an unexpected keyword argument 'verbose'\n",
+            "\u001b[1;34mwandb\u001b[0m: \n",
+            "\u001b[1;34mwandb\u001b[0m: 🚀 View run \u001b[33mfrosty-grass-2\u001b[0m at: \u001b[34m\u001b[0m\n",
+            "\u001b[1;34mwandb\u001b[0m: Find logs at: \u001b[1;35mwandb/run-20251211_143511-817gs75w/logs\u001b[0m\n"
           ]
         }
       ],
       "source": [
-        "import os\n",
-        "\n",
         "# 1. Spostati nella cartella principale del progetto (definita nella tua cella di setup)\n",
         "os.chdir(ROOT_DIR)\n",
         "\n",
